--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(180deg, pink, rgb(251, 161, 176), rgb(255, 154, 188));
+    background: linear-gradient(180deg, rgb(136, 170, 243), rgb(142, 191, 254), rgb(154, 199, 255));
     color: black;
     font-family: Georgia, sans-serif;
     margin: 0;
@@ -27,7 +27,7 @@ nav li {
 }
 
 nav a {
-    color: white;
+    color: #2c3e50;
     text-decoration: none;
     font-weight: bold;
     font-size: 18px;
