--- a/style.css
+++ b/style.css
@@ -841,8 +841,8 @@ footer p {
 }
 
 .email:hover {
-    background: #e91e63;
-    border-color: #e91e63;
+    background: var(--secondary-color);
+    border-color: var(--secondary-color);
     color: white;
 }
 
